# ares

./: .env.example  .gitignore  DEPLOYMENT_STATUS.txt  HOW_TO_USE.txt  QUICK_START.txt  README.md  SERVICE_STATUS.md  START.sh  STOP.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  setup_ollama.sh  test_ares.sh
ares_burp/: FIXES_AND_TESTS.md  __init__.py  burp_client.py  proxy_manager.py  scanner_bridge.py
ares_core/: __init__.py  ai_decision_maker.py  config.py  context_manager.py  database.py  integrated_scanner.py  main.py  models.py  ollama_client.py  orchestrator.py  prompts.py  rag_system.py  scan_workflow.py
ares_mcp/: MODULE_STRUCTURE.txt  __init__.py  examples.py  hexstrike_client.py  orchestrator.py  requirements.txt  test_integration.py  tool_selector.py
ares_scanner/: __init__.py  auth_detector.py  crawler.py  csrf_detector.py  deserialization_detector.py  sqli_detector.py  ssrf_detector.py  xss_detector.py  xxe_detector.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
tests/: test_burp_integration.py  test_csrf_detector.py  test_live_scan.py  test_ssrf_detector.py  test_system.py  test_xxe_detector.py
